force-app/main/default/objects/PMC_DH_Phone_Number_Format__mdt/PMC_DH_Phone_Number_Format__mdt.object-meta.xml
<CustomObject>
    <label>Phone Number Format</label>
    <pluralLabel>Phone Number Formats</pluralLabel>
</CustomObject>