force-app/main/default/objects/PMC_DH_Phone_Number_Format__mdt/fields/PMC_DH_Country__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Country__c</fullName>
    <label>Country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>