force-app/main/default/objects/PMC_DH_Phone_Number_Format__mdt/fields/PMC_DH_Format__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Format__c</fullName>
    <label>Format</label>
    <length>100</length>
    <type>Text</type>
</CustomField>