force-app/main/default/objects/PMC_DH_Phone_Number_Format__mdt/fields/PMC_DH_Phone_Number_Length__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Phone_Number_Length__c</fullName>
    <label>Phone Number Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>